--- a/EveningReading/Resources/Templates/Stylesheet.css
+++ b/EveningReading/Resources/Templates/Stylesheet.css
@@ -41,7 +41,7 @@ a {
   word-break: break-all !important;
 }
 
-div.postAuthor { color: -apple-system-orange; }
+div.post_author { color: -apple-system-orange; }
 
 span.jt_red    { color: -apple-system-red; }
 span.jt_green  { color: -apple-system-green; }
